--- a/Footer/footer.css
+++ b/Footer/footer.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 :root {
   /* Colors: */
-  --background-color: #EEEEEE;
-  --border-color: #AAAAAA;
+  --background-color: #eeeeee;
+  --border-color: #aaaaaa;
   --text-color: #333333;
-  --main-yellow: #FFF000;
-  --button-red: #E3007F;
+  --main-yellow: #fff000;
+  --button-red: #e3007f;
   /* Font/text values */
   --unnamed-font-family-roboto: 'Roboto';
   --unnamed-font-style-normal: normal;
@@ -26,17 +26,16 @@
 .footer {
   background-color: var(--main-yellow);
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   height: 64px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
-/*# sourceMappingURL=footer.css.map */
