--- a/Carousel/carousel.css
+++ b/Carousel/carousel.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -14,11 +14,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .carousel-container .image-container {
@@ -34,21 +34,17 @@
   height: 100%;
   margin: 0 8px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
-.container {
-  width: 100vw;
-}
-
-.container .back {
-  background-image: url("../src/img/Carousel PC/carousel-arrow-prev.svg");
+.back {
+  background-image: url('../src/img/Carousel PC/carousel-arrow-prev.svg');
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
   height: 36px;
   width: 36px;
-  top: 24%;
+  top: 45%;
   left: 10%;
   border: none;
   border-radius: 50%;
@@ -56,14 +52,14 @@
   cursor: pointer;
 }
 
-.container .forward {
-  background-image: url("../src/img/Carousel PC/carousel-arrow-next.svg");
+.forward {
+  background-image: url('../src/img/Carousel PC/carousel-arrow-next.svg');
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
   height: 36px;
   width: 36px;
-  top: 24%;
+  top: 45%;
   right: 10%;
   border: none;
   border-radius: 50%;
@@ -73,21 +69,28 @@
 }
 
 @media (max-width: 600px) {
+  #active {
+    display: block;
+  }
+  #not-active {
+    display: none;
+  }
   .carousel-container {
     display: relative;
-    width: 600%;
-    -webkit-animation-direction: alternate;
-            animation-direction: alternate;
+    width: 100%;
+    -webkit-animation-direction: normal;
+    animation-direction: normal;
     -webkit-animation-duration: 4s;
-            animation-duration: 4s;
+    animation-duration: 4s;
     -webkit-animation-delay: 2s;
-            animation-delay: 2s;
+    animation-delay: 2s;
   }
   .carousel-container .image-container {
     height: 300px;
     position: relative;
   }
   .image {
+    display: none;
     width: 280px;
     height: 100%;
   }
@@ -99,43 +102,42 @@
   }
   @-webkit-keyframes carousel-container {
     0% {
-      left: 0%;
+      right: 0%;
     }
     20% {
-      left: -100%;
+      right: -100%;
     }
     40% {
-      left: -300%;
+      right: -300%;
     }
     60% {
-      left: -300%;
+      right: -300%;
     }
     80% {
-      left: -400%;
+      right: -400%;
     }
     100% {
-      left: -500%;
+      right: -500%;
     }
   }
   @keyframes carousel-container {
     0% {
-      left: 0%;
+      right: 0%;
     }
     20% {
-      left: -100%;
+      right: -100%;
     }
     40% {
-      left: -300%;
+      right: -300%;
     }
     60% {
-      left: -300%;
+      right: -300%;
     }
     80% {
-      left: -400%;
+      right: -400%;
     }
     100% {
-      left: -500%;
+      right: -500%;
     }
   }
 }
-/*# sourceMappingURL=carousel.css.map */
