--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root {
   /* Colors: */
   --background-color: #eeeeee;
@@ -20,6 +20,10 @@
   margin: 0;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  font-size: xx-large;
 }
 
 .nav-container {
@@ -157,22 +161,22 @@
 }
 
 .hero-container {
-  height: 600px;
+  height: 50vh;
   background-image: url(../src/img/hero-bg_pc.png);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   overflow: hidden;
 }
 
 .hero-container .hero-text {
   text-align: center;
   position: absolute;
-  top: 45%;
+  top: 30%;
   width: 100%;
-  height: 100%;
+  height: 50vh;
 }
 
 @media (max-width: 600px) {
@@ -218,7 +222,7 @@
 }
 
 .back {
-  background-image: url("../src/img/Carousel PC/carousel-arrow-prev.svg");
+  background-image: url('../src/img/Carousel PC/carousel-arrow-prev.svg');
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
@@ -233,7 +237,7 @@
 }
 
 .forward {
-  background-image: url("../src/img/Carousel PC/carousel-arrow-next.svg");
+  background-image: url('../src/img/Carousel PC/carousel-arrow-next.svg');
   background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
@@ -249,11 +253,36 @@
 }
 
 @media (max-width: 600px) {
+  #active {
+    display: block;
+    opacity: 1;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+  }
+  @-webkit-keyframes active {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  @keyframes active {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  #not-active {
+    display: none;
+  }
   .carousel-container {
     display: relative;
-    width: 600%;
+    width: 100%;
     -webkit-animation-direction: normal;
-            animation-direction: normal;
+    animation-direction: normal;
     -webkit-animation-duration: 4s;
     animation-duration: 4s;
     -webkit-animation-delay: 2s;
@@ -264,54 +293,15 @@
     position: relative;
   }
   .image {
+    display: none;
     width: 280px;
     height: 100%;
   }
   .back {
-    left: 1%;
+    left: 10%;
   }
   .forward {
-    left: 14%;
-  }
-  @-webkit-keyframes carousel-container {
-    0% {
-      right: 0%;
-    }
-    20% {
-      right: -100%;
-    }
-    40% {
-      right: -300%;
-    }
-    60% {
-      right: -300%;
-    }
-    80% {
-      right: -400%;
-    }
-    100% {
-      right: -500%;
-    }
-  }
-  @keyframes carousel-container {
-    0% {
-      right: 0%;
-    }
-    20% {
-      right: -100%;
-    }
-    40% {
-      right: -300%;
-    }
-    60% {
-      right: -300%;
-    }
-    80% {
-      right: -400%;
-    }
-    100% {
-      right: -500%;
-    }
+    right: 10%;
   }
 }
 
@@ -320,17 +310,16 @@
     width: 100;
     padding: 10%;
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
   }
   #card-section .section-title {
-    margin-top: 5em;
+    margin-top: 1em;
   }
   #card-section .small-card-container {
     display: -ms-grid;
     display: grid;
     grid-gap: 1em;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     height: auto;
   }
   #card-section .small-card-container .small-card {
@@ -341,7 +330,7 @@
   #card-section .small-card-container .small-card .small-card-image {
     width: 100%;
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
   }
   #card-section .small-card-container .small-card .card-title {
     margin: 0.5em 0;
@@ -352,8 +341,7 @@
   #card-section .big-card-container {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1 1fr);
+    grid-template-columns: repeat(1 1fr);
     height: auto;
   }
   #card-section .big-card-container .big-card {
@@ -362,7 +350,7 @@
   }
   #card-section .big-card-container .big-card .big-card-image {
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     width: 100%;
   }
   #card-section .big-card-container .big-card .card-title {
@@ -378,7 +366,7 @@
     width: 100;
     padding: 10%;
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
   }
   #card-section h2 {
     margin: 2rem 0;
@@ -388,8 +376,7 @@
     display: grid;
     height: auto;
     grid-gap: 1em 1em;
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
   #card-section .small-card-container .small-card .small-card-image {
     height: 170px;
@@ -406,8 +393,7 @@
     display: -ms-grid;
     display: grid;
     grid-gap: 1em;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   #card-section .big-card-container .big-card .big-card-image {
     -o-object-fit: contain;
@@ -427,17 +413,15 @@
     display: -ms-grid;
     display: grid;
     grid-gap: 1em;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: 'image1 content1 content1';
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 'image1 content1 content1';
   }
   .section-card-container2 {
     display: -ms-grid;
     display: grid;
     grid-gap: 1em;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: 'content2 content2 image2';
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 'content2 content2 image2';
   }
   #section-card-content {
     margin: 2em 0;
@@ -464,27 +448,18 @@
   #section-card-image .section-image {
     width: 400px;
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
   }
   .image1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
     grid-area: image1;
   }
   .content1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
     grid-area: content1;
   }
   .image2 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 3;
     grid-area: image2;
   }
   .content2 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: content2;
   }
@@ -494,14 +469,12 @@
   .section-card-container1 {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .section-card-container2 {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   #section-card-content {
     margin: 1em 0;
@@ -637,8 +610,7 @@
     width: 100%;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (fr)[1];
-        grid-template-columns: repeat(1, fr);
+    grid-template-columns: repeat(1, fr);
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -667,8 +639,7 @@
   #form .category .checkbox {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
   }
   #form .category .checkbox .align {
@@ -706,4 +677,3 @@
     border-radius: 5px;
   }
 }
-/*# sourceMappingURL=index.css.map */
